<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/window_background">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_custom_link_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <TextView
        android:id="@+id/lbl_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/txt_title"
        android:textStyle="bold"
        android:text="@string/no_custom_link"
        android:layout_centerInParent="true"
        android:visibility="gone" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_add_custom_link"
        android:src="@drawable/ic_add_white_24dp"
        app:fabSize="normal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="@dimen/window_horizontal_padding"
        android:layout_marginBottom="@dimen/window_horizontal_padding"/>
</RelativeLayout>