...
        android:id="@+id/lyt_txt_custom_link_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true">

        <EditText
            android:id="@+id/txt_custom_link_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:hint="@string/title" />
...
        android:layout_height="wrap_content"
        android:layout_below="@id/lyt_txt_custom_link_title"
        app:errorTextAppearance="@style/error_appearance"
        app:errorEnabled="true">

        <EditText
            android:id="@+id/txt_custom_link_uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textUri"
            android:imeOptions="actionDone"
            android:maxLines="1"
            android:hint="@string/uri" />
...
